# plano-docente-api

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
migrations/2019-10-21-001822_PDC/: down.sql  up.sql
src/: atendimentos_model.rs  atendimentos_route.rs  atividades_administrativas_model.rs  atividades_administrativas_route.rs  atividades_extensao_model.rs  atividades_extensao_route.rs  atividades_pesquisa_model.rs  atividades_pesquisa_route.rs  aulas_model.rs  aulas_route.rs  ciclos_letivos_model.rs  ciclos_letivos_route.rs  componentes_curriculares_model.rs  componentes_curriculares_route.rs  cors.rs  cursos_model.rs  cursos_route.rs  default_routes.rs  main.rs  niveis_ensino_model.rs  niveis_ensino_route.rs  professors_model.rs  professors_route.rs  projetos_ensino_model.rs  projetos_ensino_route.rs  reunioes_formacao_docente_model.rs  reunioes_formacao_docente_route.rs  schema.rs  users_model.rs  users_route.rs
src/static_content/: index.html
