[package]
name = "plano-docente-api"
version = "0.1.0"
authors = ["Gabriel Pivato <pivatogabriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.9", features = ["serde"] }

# For connecting with the MySQL database
diesel = { version = "1.4.3", features = ["chrono"] }

# Lazy static initialization
lazy_static = "1.4.0"

# Rocket Webserver
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json", "diesel_mysql_pool"] }
rocket-include-static-resources = "0.9.3"

# Serialization/Deserialization
serde_json = "1.0.41"
serde = "1.0.102"
serde_derive ="1.0.102"